app/javascript/styles/mastodon/components.scss
/* ... */
.conversation {
  display: flex;
  border-bottom: 1px solid var(--color-border-primary);
  padding: 5px;
  padding-bottom: 0;

  &:focus {
    background: var(--color-bg-secondary);
    outline: 0;
  }

  &__avatar {
    flex: 0 0 auto;
    padding: 10px;
    padding-top: 12px;
    position: relative;
    cursor: pointer;
  }

  &__unread {
    display: inline-block;
    background: var(--color-text-brand);
    border-radius: 50%;
    width: 0.625rem;
    height: 0.625rem;
    margin: -0.1ex 0.15em 0.1ex;
  }

  &__content {
    flex: 1 1 auto;
    padding: 10px 5px;
    padding-inline-end: 15px;
    overflow: hidden;

    &__info {
      overflow: hidden;
      display: flex;
      flex-direction: row-reverse;
      justify-content: space-between;
    }

    &__relative-time {
      font-size: 15px;
      color: var(--color-text-secondary);
      padding-inline-start: 15px;
    }

    &__names {
      color: var(--color-text-secondary);
      font-size: 15px;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      margin-bottom: 4px;
      flex-basis: 90px;
      flex-grow: 1;

      a {
        color: var(--color-text-primary);
        text-decoration: none;

        &:hover,
        &:focus,
        &:active {
          text-decoration: underline;
        }
      }
    }

    a {
      overflow-wrap: anywhere;
    }
  }
}

.announcements {
  width: calc(100% - 124px);
  flex: 0 0 auto;
  position: relative;
  overflow: hidden;

  .layout-multiple-columns & {
    width: 100%;
  }

  @media screen and (max-width: (124px + 300px)) {
    width: 100%;
  }

  &__root {
    background: var(--color-bg-brand-softest);
    font-size: 13px;
    display: flex;
    align-items: flex-end;
  }

  &__mastodon {
    width: 124px;
    flex: 0 0 auto;

    @media screen and (max-width: (124px + 300px)) {
      display: none;
    }
  }

  &__slides {
    display: flex;
    flex-wrap: nowrap;
    align-items: start;
  }

  &__slide {
    box-sizing: border-box;
    width: 100%;
    flex: 0 0 100%;
    padding: 15px;
    position: relative;
    font-size: 15px;
    line-height: 20px;
    overflow-wrap: break-word;
    font-weight: 400;
    max-height: 50vh;
    overflow: hidden;
    flex-direction: column;
  }

  &__range {
    display: block;
    font-weight: 500;
    margin-bottom: 10px;
    padding-inline-end: 18px;
  }

  &__unread {
    position: absolute;
    top: 19px;
    inset-inline-end: 19px;
    display: block;
    background: var(--color-text-brand);
    border-radius: 50%;
    width: 0.625rem;
    height: 0.625rem;
  }

  &__pagination {
    padding: 15px;
    color: var(--color-text-secondary);
    position: absolute;
    bottom: 3px;
    inset-inline-end: 0;
    display: flex;
    align-items: center;
    z-index: 1;
  }
}

.layout-multiple-columns .announcements__mastodon {
  display: none;
}

.layout-multiple-columns .announcements__container {
  width: 100%;
}

.reactions-bar {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  margin-top: 15px;
  margin-inline-start: -2px;
  width: calc(100% - (90px - 33px));

  &__item {
    flex-shrink: 0;
    background: var(--color-bg-brand-softest);
    color: color-mix(
      in oklab,
      var(--color-text-primary),
      var(--color-text-secondary)
    );
    border: 1px solid var(--color-border-brand-soft);
    border-radius: 3px;
    box-sizing: border-box;
    margin: 2px;
    cursor: pointer;
    user-select: none;
    padding: 0 6px;
    display: flex;
    align-items: center;
    transition: all 100ms ease-in;
    transition-property: background-color, color;

    &__emoji {
      display: block;
      margin: 3px 0;
      width: 16px;
      height: 16px;

      img {
        display: block;
        margin: 0;
        width: 100%;
        height: 100%;
        min-width: auto;
        min-height: auto;
        object-fit: contain;
      }
    }

    &__count {
      display: block;
      min-width: 9px;
      font-size: 13px;
      font-weight: 500;
      text-align: center;
      margin-inline-start: 6px;
    }

    &:hover,
    &:focus,
    &:active {
      color: var(--color-text-primary);
      background: var(--color-bg-brand-soft);
      transition: all 200ms ease-out;
      transition-property: background-color, color;
    }

    &.active {
      color: var(--color-text-brand);
      background-color: var(--color-bg-brand-softest);
      border-color: var(--color-border-brand);
      transition: all 100ms ease-in;
      transition-property: background-color, color;
    }
  }

  .emoji-picker-dropdown {
    display: flex;
    margin: 2px;
  }

  &:hover .emoji-button {
    opacity: 0.85;
  }

  .emoji-button {
    color: var(--color-text-secondary);
    margin: 0;
    font-size: 16px;
    width: auto;
    flex-shrink: 0;
    padding: 0 6px;
    height: 22px;
    display: flex;
    align-items: center;
    opacity: 0.5;
    transition: all 100ms ease-in;
    transition-property: background-color, color;

    &:hover,
    &:active,
    &:focus {
      opacity: 1;
      color: color-mix(
        in oklab,
        var(--color-text-primary),
        var(--color-text-secondary)
      );
      transition: all 200ms ease-out;
      transition-property: background-color, color;
    }
  }

  &--empty {
    .emoji-button {
      padding: 0;
    }
  }
}

.notification,
.status__wrapper,
.conversation {
  position: relative;

  &.unread {
    &::before {
      content: '';
      position: absolute;
      top: 0;
      inset-inline-start: 0;
      width: 100%;
      height: 100%;
      border-inline-start: 4px solid var(--color-border-brand);
      pointer-events: none;
    }
  }
}
/* ... */

